--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "4-Azamat-Ishbaev"]
 	path = 4-Azamat-Ishbaev
 	url = git@github.com:spbu-coding-2023/4-Azamat-Ishbaev.git
+[submodule "4-DARKpluz"]
+	path = 4-DARKpluz
+	url = git@github.com:spbu-coding-2023/4-DARKpluz.git
