--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "4-DARKpluz"]
 	path = 4-DARKpluz
 	url = git@github.com:spbu-coding-2023/4-DARKpluz.git
+[submodule "4-Demon32123"]
+	path = 4-Demon32123
+	url = git@github.com:spbu-coding-2023/4-Demon32123.git
