--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "4-Demon32123"]
 	path = 4-Demon32123
 	url = git@github.com:spbu-coding-2023/4-Demon32123.git
+[submodule "4-SecretPersona5"]
+	path = 4-SecretPersona5
+	url = git@github.com:spbu-coding-2023/4-SecretPersona5.git
