--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "4-SecretPersona5"]
 	path = 4-SecretPersona5
 	url = git@github.com:spbu-coding-2023/4-SecretPersona5.git
+[submodule "4-bikakuka"]
+	path = 4-bikakuka
+	url = git@github.com:spbu-coding-2023/4-bikakuka.git
