--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule "4-bikakuka"]
 	path = 4-bikakuka
 	url = git@github.com:spbu-coding-2023/4-bikakuka.git
+[submodule "4-homka122"]
+	path = 4-homka122
+	url = git@github.com:spbu-coding-2023/4-homka122.git
