--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 [submodule "4-homka122"]
 	path = 4-homka122
 	url = git@github.com:spbu-coding-2023/4-homka122.git
+[submodule "4-p1onerka"]
+	path = 4-p1onerka
+	url = git@github.com:spbu-coding-2023/4-p1onerka.git
