--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "4-p1onerka"]
 	path = 4-p1onerka
 	url = git@github.com:spbu-coding-2023/4-p1onerka.git
+[submodule "4-qrutyy"]
+	path = 4-qrutyy
+	url = git@github.com:spbu-coding-2023/4-qrutyy.git
