--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "4-qrutyy"]
 	path = 4-qrutyy
 	url = git@github.com:spbu-coding-2023/4-qrutyy.git
+[submodule "4-sofyak0zyreva"]
+	path = 4-sofyak0zyreva
+	url = git@github.com:spbu-coding-2023/4-sofyak0zyreva.git
