--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "4-sofyak0zyreva"]
 	path = 4-sofyak0zyreva
 	url = git@github.com:spbu-coding-2023/4-sofyak0zyreva.git
+[submodule "4-suvorovrain"]
+	path = 4-suvorovrain
+	url = git@github.com:spbu-coding-2023/4-suvorovrain.git
