--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,6 @@
 [submodule "4-suvorovrain"]
 	path = 4-suvorovrain
 	url = git@github.com:spbu-coding-2023/4-suvorovrain.git
+[submodule "4-Dennis2909"]
+	path = 4-Dennis2909
+	url = git@github.com:spbu-coding-2023/4-Dennis2909.git
