--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,6 @@
 [submodule "4-Dennis2909"]
 	path = 4-Dennis2909
 	url = git@github.com:spbu-coding-2023/4-Dennis2909.git
+[submodule "4-Friend-zva"]
+	path = 4-Friend-zva
+	url = git@github.com:spbu-coding-2023/4-Friend-zva.git
