--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,6 @@
 [submodule "4-Friend-zva"]
 	path = 4-Friend-zva
 	url = git@github.com:spbu-coding-2023/4-Friend-zva.git
+[submodule "4-IliaSuponeff"]
+	path = 4-IliaSuponeff
+	url = git@github.com:spbu-coding-2023/4-IliaSuponeff.git
