--- a/.gitmodules
+++ b/.gitmodules
@@ -43,3 +43,6 @@
 [submodule "4-IliaSuponeff"]
 	path = 4-IliaSuponeff
 	url = git@github.com:spbu-coding-2023/4-IliaSuponeff.git
+[submodule "4-OGchukh"]
+	path = 4-OGchukh
+	url = git@github.com:spbu-coding-2023/4-OGchukh.git
