--- a/.gitmodules
+++ b/.gitmodules
@@ -49,3 +49,6 @@
 [submodule "4-RodionovMaxim05"]
 	path = 4-RodionovMaxim05
 	url = git@github.com:spbu-coding-2023/4-RodionovMaxim05.git
+[submodule "4-Sibiri4ok"]
+	path = 4-Sibiri4ok
+	url = git@github.com:spbu-coding-2023/4-Sibiri4ok.git
