--- a/.gitmodules
+++ b/.gitmodules
@@ -58,3 +58,6 @@
 [submodule "4-VersusXX"]
 	path = 4-VersusXX
 	url = git@github.com:spbu-coding-2023/4-VersusXX.git
+[submodule "4-VyacheslavIurevich"]
+	path = 4-VyacheslavIurevich
+	url = git@github.com:spbu-coding-2023/4-VyacheslavIurevich.git
