--- a/.gitmodules
+++ b/.gitmodules
@@ -61,3 +61,6 @@
 [submodule "4-VyacheslavIurevich"]
 	path = 4-VyacheslavIurevich
 	url = git@github.com:spbu-coding-2023/4-VyacheslavIurevich.git
+[submodule "4-Ycyken"]
+	path = 4-Ycyken
+	url = git@github.com:spbu-coding-2023/4-Ycyken.git
