--- a/.gitmodules
+++ b/.gitmodules
@@ -67,3 +67,6 @@
 [submodule "4-b08lsoai"]
 	path = 4-b08lsoai
 	url = git@github.com:spbu-coding-2023/4-b08lsoai.git
+[submodule "4-kinokotakenoko9"]
+	path = 4-kinokotakenoko9
+	url = git@github.com:spbu-coding-2023/4-kinokotakenoko9.git
