--- a/.gitmodules
+++ b/.gitmodules
@@ -70,3 +70,6 @@
 [submodule "4-kinokotakenoko9"]
 	path = 4-kinokotakenoko9
 	url = git@github.com:spbu-coding-2023/4-kinokotakenoko9.git
+[submodule "4-mdcp10"]
+	path = 4-mdcp10
+	url = git@github.com:spbu-coding-2023/4-mdcp10.git
