--- a/.gitmodules
+++ b/.gitmodules
@@ -73,3 +73,6 @@
 [submodule "4-mdcp10"]
 	path = 4-mdcp10
 	url = git@github.com:spbu-coding-2023/4-mdcp10.git
+[submodule "4-mshipilov5"]
+	path = 4-mshipilov5
+	url = git@github.com:spbu-coding-2023/4-mshipilov5.git
