--- a/.gitmodules
+++ b/.gitmodules
@@ -76,3 +76,6 @@
 [submodule "4-mshipilov5"]
 	path = 4-mshipilov5
 	url = git@github.com:spbu-coding-2023/4-mshipilov5.git
+[submodule "4-starscream1337"]
+	path = 4-starscream1337
+	url = git@github.com:spbu-coding-2023/4-starscream1337.git
