--- a/.gitmodules
+++ b/.gitmodules
@@ -82,3 +82,6 @@
 [submodule "4-DanKu02"]
 	path = 4-DanKu02
 	url = git@github.com:spbu-coding-2023/4-DanKu02.git
+[submodule "4-DronShock"]
+	path = 4-DronShock
+	url = git@github.com:spbu-coding-2023/4-DronShock.git
