--- a/.gitmodules
+++ b/.gitmodules
@@ -85,3 +85,6 @@
 [submodule "4-DronShock"]
 	path = 4-DronShock
 	url = git@github.com:spbu-coding-2023/4-DronShock.git
+[submodule "4-Kirilich"]
+	path = 4-Kirilich
+	url = git@github.com:spbu-coding-2023/4-Kirilich.git
