--- a/.gitmodules
+++ b/.gitmodules
@@ -88,3 +88,6 @@
 [submodule "4-Kirilich"]
 	path = 4-Kirilich
 	url = git@github.com:spbu-coding-2023/4-Kirilich.git
+[submodule "4-Mukovenkov-Roman-Sergeyevich"]
+	path = 4-Mukovenkov-Roman-Sergeyevich
+	url = git@github.com:spbu-coding-2023/4-Mukovenkov-Roman-Sergeyevich.git
