--- a/.gitmodules
+++ b/.gitmodules
@@ -91,3 +91,6 @@
 [submodule "4-Mukovenkov-Roman-Sergeyevich"]
 	path = 4-Mukovenkov-Roman-Sergeyevich
 	url = git@github.com:spbu-coding-2023/4-Mukovenkov-Roman-Sergeyevich.git
+[submodule "4-Sem4kok"]
+	path = 4-Sem4kok
+	url = git@github.com:spbu-coding-2023/4-Sem4kok.git
