--- a/.gitmodules
+++ b/.gitmodules
@@ -94,3 +94,6 @@
 [submodule "4-Sem4kok"]
 	path = 4-Sem4kok
 	url = git@github.com:spbu-coding-2023/4-Sem4kok.git
+[submodule "4-f1i3g3"]
+	path = 4-f1i3g3
+	url = git@github.com:spbu-coding-2023/4-f1i3g3.git
