--- a/.gitmodules
+++ b/.gitmodules
@@ -97,3 +97,6 @@
 [submodule "4-f1i3g3"]
 	path = 4-f1i3g3
 	url = git@github.com:spbu-coding-2023/4-f1i3g3.git
+[submodule "4-kar1mgh"]
+	path = 4-kar1mgh
+	url = git@github.com:spbu-coding-2023/4-kar1mgh.git
