--- a/.gitmodules
+++ b/.gitmodules
@@ -109,3 +109,6 @@
 [submodule "4-vicitori"]
 	path = 4-vicitori
 	url = git@github.com:spbu-coding-2023/4-vicitori.git
+[submodule "4-D31IRIUM"]
+	path = 4-D31IRIUM
+	url = git@github.com:spbu-coding-2023/4-D31IRIUM.git
