--- a/.gitmodules
+++ b/.gitmodules
@@ -112,3 +112,6 @@
 [submodule "4-D31IRIUM"]
 	path = 4-D31IRIUM
 	url = git@github.com:spbu-coding-2023/4-D31IRIUM.git
+[submodule "4-DripCat4er"]
+	path = 4-DripCat4er
+	url = git@github.com:spbu-coding-2023/4-DripCat4er.git
