--- a/.gitmodules
+++ b/.gitmodules
@@ -115,3 +115,6 @@
 [submodule "4-DripCat4er"]
 	path = 4-DripCat4er
 	url = git@github.com:spbu-coding-2023/4-DripCat4er.git
+[submodule "4-ElBananium"]
+	path = 4-ElBananium
+	url = git@github.com:spbu-coding-2023/4-ElBananium.git
