--- a/.gitmodules
+++ b/.gitmodules
@@ -118,3 +118,6 @@
 [submodule "4-ElBananium"]
 	path = 4-ElBananium
 	url = git@github.com:spbu-coding-2023/4-ElBananium.git
+[submodule "4-Lyart123"]
+	path = 4-Lyart123
+	url = git@github.com:spbu-coding-2023/4-Lyart123.git
