--- a/.gitmodules
+++ b/.gitmodules
@@ -121,3 +121,6 @@
 [submodule "4-Lyart123"]
 	path = 4-Lyart123
 	url = git@github.com:spbu-coding-2023/4-Lyart123.git
+[submodule "4-Szczucki"]
+	path = 4-Szczucki
+	url = git@github.com:spbu-coding-2023/4-Szczucki.git
