--- a/.gitmodules
+++ b/.gitmodules
@@ -127,3 +127,6 @@
 [submodule "4-shvorobsofia"]
 	path = 4-shvorobsofia
 	url = git@github.com:spbu-coding-2023/4-shvorobsofia.git
+[submodule "4-RamProsad2"]
+	path = 4-RamProsad2
+	url = git@github.com:spbu-coding-2023/4-RamProsad2.git
