--- a/.gitmodules
+++ b/.gitmodules
@@ -130,3 +130,6 @@
 [submodule "4-RamProsad2"]
 	path = 4-RamProsad2
 	url = git@github.com:spbu-coding-2023/4-RamProsad2.git
+[submodule "4-Vladzabaev"]
+	path = 4-Vladzabaev
+	url = git@github.com:spbu-coding-2023/4-Vladzabaev.git
