--- a/.gitmodules
+++ b/.gitmodules
@@ -136,3 +136,6 @@
 [submodule "4-oleg01228"]
 	path = 4-oleg01228
 	url = git@github.com:spbu-coding-2023/4-oleg01228.git
+[submodule "4-MigunovaAnastasia1"]
+	path = 4-MigunovaAnastasia1
+	url = git@github.com:spbu-coding-2023/4-MigunovaAnastasia1.git
