--- a/.gitmodules
+++ b/.gitmodules
@@ -139,3 +139,6 @@
 [submodule "4-MigunovaAnastasia1"]
 	path = 4-MigunovaAnastasia1
 	url = git@github.com:spbu-coding-2023/4-MigunovaAnastasia1.git
+[submodule "4-IslamZZZZ"]
+	path = 4-IslamZZZZ
+	url = git@github.com:spbu-coding-2023/4-IslamZZZZ.git
