--- a/.gitmodules
+++ b/.gitmodules
@@ -142,3 +142,6 @@
 [submodule "4-IslamZZZZ"]
 	path = 4-IslamZZZZ
 	url = git@github.com:spbu-coding-2023/4-IslamZZZZ.git
+[submodule "4-d031273"]
+	path = 4-d031273
+	url = git@github.com:spbu-coding-2023/4-d031273.git
