--- a/.gitmodules
+++ b/.gitmodules
@@ -145,3 +145,6 @@
 [submodule "4-d031273"]
 	path = 4-d031273
 	url = git@github.com:spbu-coding-2023/4-d031273.git
+[submodule "4-Asif2040"]
+	path = 4-Asif2040
+	url = git@github.com:spbu-coding-2023/4-Asif2040.git
