--- a/.gitmodules
+++ b/.gitmodules
@@ -148,3 +148,6 @@
 [submodule "4-Asif2040"]
 	path = 4-Asif2040
 	url = git@github.com:spbu-coding-2023/4-Asif2040.git
+[submodule "4-far1yg"]
+	path = 4-far1yg
+	url = git@github.com:spbu-coding-2023/4-far1yg.git
