--- a/.gitmodules
+++ b/.gitmodules
@@ -154,3 +154,6 @@
 [submodule "4-vicheka-sk"]
 	path = 4-vicheka-sk
 	url = git@github.com:spbu-coding-2023/4-vicheka-sk.git
+[submodule "4-ivanovmapths"]
+	path = 4-ivanovmapths
+	url = git@github.com:spbu-coding-2023/4-ivanovmapths.git
