--- a/.gitmodules
+++ b/.gitmodules
@@ -160,3 +160,6 @@
 [submodule "4-iakhammatova"]
 	path = 4-iakhammatova
 	url = git@github.com:spbu-coding-2023/4-iakhammatova.git
+[submodule "4-dinozaurnugget"]
+	path = 4-dinozaurnugget
+	url = git@github.com:spbu-coding-2023/4-dinozaurnugget.git
